syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.seasugar.api";
option java_outer_classname = "ProductProto";

service ProductService {
  rpc GetProduct (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  int64 product_id = 1;
}

message ProductResponse {
  string name = 1;
  float price = 2;
  string description = 3;
}